Add packages, CSS, SQl, and JS files
Add the packages for configurations, controllers, models, repositories,
and services for Twitter Clone made on Spring-boot Framework and
adjustments made to application.properties file, and pom.xml file.

--- a/pom.xml
+++ b/pom.xml
@@ -72,7 +72,21 @@
 			<artifactId>spring-security-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-	</dependencies>
+		
+		<!-- Added dependencies -->
+		
+    <dependency>
+        <groupId>org.thymeleaf.extras</groupId>
+        <artifactId>thymeleaf-extras-springsecurity4</artifactId>
+        <version>3.0.2.RELEASE</version>
+    </dependency>
+    <dependency>
+        <groupId>org.ocpsoft.prettytime</groupId>
+        <artifactId>prettytime</artifactId>
+        <version>4.0.1.Final</version>
+    </dependency>
+    
+</dependencies>
 
 	<build>
 		<plugins>
