--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,7 @@ spring.datasource.url = jdbc:h2:file:~/twitter
 spring.datasource.username = sa
 spring.datasource.password =
 spring.datasource.driver-class-name = org.h2.Driver
+server.port= 8084
 
 # show sql queries in console
 spring.jpa.show-sql = true
