Fixed instance issue

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+#For Twitter CLone
 # configure data source
 # the db will be stored in a file that persist across app restarts
 spring.h2.console.enabled = true
